.......P.. [ZBX-3817] improved performance of the "data sender" process (Sasha)
.......PS. [ZBX-5436] added support of AllowRoot paramater by server and proxy daemons (Sasha)
..F....... [ZBX-5180] maintenance periods form redesign (Vedmak)
.......PS. [ZBXNEXT-1335] pingers work without connection to a database (Sasha)
..F....... [ZBX-5127] regular expressions form redesign (Vedmak)

Bug fixes:
A.F....... [ZBX-5927] fixed selectMappings returning a hash of mappings instead of an array in iconmap.get (Pavels)
A.F....... [ZBX-5927] fixed preservekeys affecting selectSelements and selectLinks in map.get (Pavels)
..F....... [ZBX-5888] fixed incorrect message in trigger expression test (Oleg)
..F....... [ZBX-5895] fixed including map in map (Eduard)
A.F....... [ZBX-5814] fixed an incorrect error message when saving an illegal trigger expression (Sasha)
A.F....... [ZBX-4247] fixed processing of trigger expression if item key contains another trigger expression string (Sasha)
..F....... [ZBX-2640] fixed some issues when creating and editing log triggers (Sasha)
A......... [ZBX-5718] fixed unknown event generation for templated triggers (Oleg)
..F....... [ZBX-5749] fixed macros resolving in triggers in Maps (Eduard)
A......... [ZBX-5752] fixed incorrect API results, when deleted template objects (Oleg)
A......... [ZBX-5709] fixed trigger recreation after template trigger expression change causing event history deletion (Toms)
..F....... [ZBX-5711] added caching for frontend favorite values (Toms)
..F....... [ZBX-5711] removed redundant queries when editing web scenario (Toms)
A.F....... [ZBX-5565] fixed html is returned on api requests if db is down (Vedmak)
..F....... [ZBX-3396] added error message if FreeType support is missing (Toms)
...G...... [ZBX-4355] fixed response on check inodes on file systems not supporting them (Sasha)
..F....... [ZBX-5673] fixed incorrect Y-scale if point value > 10 PB (Oleg)
..F....... [ZBX-875] fixed duplicate Y-scale (Oleg)